tests/test_data/CodeStructureSnippets/bad/sem_err_3.8.ifj21
require "ifj21"
function foo()
    local x : integer = 2
    if(1)then
        local x : integer = 3
        write(x)
    else
        local x : integer = 9
    end

    if (0) then
        local x : integer = 5
        write(x)
    else
        local x : integer = 10
    end
end
foo()
